--- a/home.html
+++ b/home.html
@@ -1,10 +1,18 @@
+<!doctype html>
 <html>
 <head>
-<meta chaset="utf-8">
-<title> Github - Home </title>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap - Ejemplo 1</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<script src="js/bootstrap.js"></script>
 </head>
 <body>
-<h1> Bienvenido </h1>
-<img src="foto.jpg"/>
-</body>
+<div class="jumbotrom text-center miEstilo">
+  <h1> Bienbenido! <h1>
+    </div>
+    <div class=""container>
+    <img src="img/foto.jpg" class="img-fluid rounded" alt="Responsive Image">
+    </div>
+    </body>
 </html>
