--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <h1> Bienbenido! <h1>
     </div>
     <div class=""container>
-    <img src="img/foto.jpg" class="img-fluid rounded" alt="Responsive Image">
+    <img src="img/foto.jpg" class="img-fluid rounded" alt="Responsive Image"/>
     </div>
     </body>
 </html>
